tests/snapshots/generator__advanced_create_files@_exact_bytes_1000_exact_1_10_1000.snap
---
source: tests/generator.rs
expression: "&golden"
---
Exactly 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 10 where each directory contains approximately 1 other directory. Each file will contain approximately 1,000 bytes of random data totaling exactly 1000 bytes.
Created 1 file (1.0 kB) across 0 directories.

/0

0x54d4459543d4df0c
