tests/snapshots/generator__duplicate_create_files@_1000_10_1000.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1,000 files will be generated in approximately 1 directory distributed across a tree of maximum depth 10 where each directory contains approximately 1 other directory.
Created 1,102 files across 8 directories.

/0
/0.dir
/1
/10
/100
/101
/102
/103
/104
/105
/106
/107
/108
/109
/11
/110
/111
/112
/113
/114
/115
/116
/117
/118
/119
/12
/120
/121
/122
/123
/124
/125
/126
/127
/128
/129
/13
/130
/131
/132
/133
/134
/135
/136
/137
/138
/139
/14
/140
/141
/142
/143
/144
/145
/146
/147
/148
/149
/15
/150
/151
/152
/153
/154
/155
/156
/157
/158
/159
/16
/160
/161
/162
/163
/164
/165
/166
/167
/168
/169
/17
/170
/171
/172
/173
/174
/175
/176
/177
/178
/179
/18
/180
/181
/182
/183
/184
/185
/186
/187
/188
/189
/19
/190
/191
/192
/193
/194
/195
/196
/197
/198
/199
/2
/20
/200
/201
/202
/203
/204
/205
/206
/207
/208
/209
/21
/210
/211
/212
/213
/214
/215
/216
/217
/218
/219
/22
/220
/221
/222
/223
/224
/225
/226
/227
/228
/229
/23
/230
/231
/232
/233
/234
/235
/236
/237
/238
/239
/24
/240
/241
/242
/243
/244
/245
/246
/247
/248
/249
/25
/250
/251
/252
/253
/254
/255
/256
/257
/258
/259
/26
/260
/261
/262
/263
/264
/265
/266
/267
/268
/269
/27
/270
/271
/272
/273
/274
/275
/276
/277
/278
/279
/28
/280
/281
/282
/283
/284
/285
/286
/287
/288
/289
/29
/290
/291
/292
/293
/294
/295
/296
/297
/298
/299
/3
/30
/300
/301
/302
/303
/304
/305
/306
/307
/308
/309
/31
/310
/311
/312
/313
/314
/315
/316
/317
/318
/319
/32
/320
/321
/322
/323
/324
/325
/326
/327
/328
/329
/33
/330
/331
/332
/333
/334
/335
/336
/337
/338
/339
/34
/340
/341
/342
/343
/344
/345
/346
/347
/348
/349
/35
/350
/351
/352
/353
/354
/355
/356
/357
/358
/359
/36
/360
/361
/362
/363
/364
/365
/366
/367
/368
/369
/37
/370
/371
/372
/373
/374
/375
/376
/377
/378
/379
/38
/380
/381
/382
/383
/384
/385
/386
/387
/388
/389
/39
/390
/391
/392
/393
/394
/395
/396
/397
/398
/399
/4
/40
/400
/401
/402
/403
/404
/405
/406
/407
/408
/409
/41
/410
/411
/412
/413
/414
/415
/416
/417
/418
/419
/42
/420
/421
/422
/423
/424
/425
/426
/427
/428
/429
/43
/430
/431
/432
/433
/434
/435
/436
/437
/438
/439
/44
/440
/441
/442
/443
/444
/445
/446
/447
/448
/449
/45
/450
/451
/452
/453
/454
/455
/456
/457
/458
/459
/46
/460
/461
/462
/463
/464
/465
/466
/467
/468
/469
/47
/470
/471
/472
/473
/474
/475
/476
/477
/478
/479
/48
/480
/481
/482
/483
/484
/485
/486
/487
/488
/489
/49
/490
/491
/492
/493
/494
/495
/496
/497
/498
/499
/5
/50
/500
/501
/502
/503
/504
/505
/506
/507
/508
/509
/51
/510
/511
/512
/513
/514
/515
/516
/517
/518
/519
/52
/520
/521
/522
/523
/524
/525
/526
/527
/528
/529
/53
/530
/531
/532
/533
/534
/535
/536
/537
/538
/539
/54
/540
/541
/542
/543
/544
/545
/546
/547
/548
/549
/55
/550
/551
/552
/553
/554
/555
/556
/557
/558
/559
/56
/560
/561
/562
/563
/564
/565
/566
/567
/568
/569
/57
/570
/571
/572
/573
/574
/575
/576
/577
/578
/579
/58
/580
/581
/582
/583
/584
/585
/586
/587
/588
/589
/59
/590
/591
/592
/593
/594
/595
/596
/597
/598
/599
/6
/60
/600
/601
/602
/603
/604
/605
/606
/607
/608
/609
/61
/610
/611
/612
/613
/614
/615
/616
/617
/618
/619
/62
/620
/621
/622
/623
/624
/625
/626
/627
/628
/629
/63
/630
/631
/632
/633
/634
/635
/636
/637
/638
/639
/64
/640
/641
/642
/643
/644
/645
/646
/647
/648
/649
/65
/650
/651
/652
/653
/654
/655
/656
/657
/658
/659
/66
/660
/661
/662
/663
/664
/665
/666
/667
/668
/669
/67
/670
/671
/672
/673
/674
/675
/676
/677
/678
/679
/68
/680
/681
/682
/683
/684
/685
/686
/687
/688
/689
/69
/690
/691
/692
/693
/694
/695
/696
/697
/698
/699
/7
/70
/700
/701
/702
/703
/704
/705
/706
/707
/708
/709
/71
/710
/711
/712
/713
/714
/715
/716
/717
/718
/719
/72
/720
/721
/722
/723
/724
/725
/726
/727
/728
/729
/73
/730
/731
/732
/733
/734
/735
/736
/737
/738
/739
/74
/740
/741
/742
/743
/744
/745
/746
/747
/748
/749
/75
/750
/751
/752
/753
/754
/755
/756
/757
/758
/759
/76
/760
/761
/762
/763
/764
/765
/766
/767
/768
/769
/77
/770
/771
/772
/773
/774
/775
/776
/777
/778
/779
/78
/780
/781
/782
/783
/784
/785
/786
/787
/788
/789
/79
/790
/791
/792
/793
/794
/795
/796
/797
/798
/799
/8
/80
/800
/801
/802
/803
/804
/805
/806
/807
/808
/809
/81
/810
/811
/812
/813
/814
/815
/816
/817
/818
/819
/82
/820
/821
/822
/823
/824
/825
/826
/827
/828
/829
/83
/830
/831
/832
/833
/834
/835
/836
/837
/838
/839
/84
/840
/841
/842
/843
/844
/845
/846
/847
/848
/849
/85
/850
/851
/852
/853
/86
/87
/88
/89
/9
/90
/91
/92
/93
/94
/95
/96
/97
/98
/99
/0.dir/0
/0.dir/0.dir
/0.dir/1
/0.dir/10
/0.dir/100
/0.dir/101
/0.dir/102
/0.dir/103
/0.dir/104
/0.dir/105
/0.dir/106
/0.dir/107
/0.dir/108
/0.dir/109
/0.dir/11
/0.dir/110
/0.dir/111
/0.dir/112
/0.dir/113
/0.dir/114
/0.dir/115
/0.dir/116
/0.dir/117
/0.dir/118
/0.dir/119
/0.dir/12
/0.dir/120
/0.dir/121
/0.dir/122
/0.dir/123
/0.dir/124
/0.dir/125
/0.dir/126
/0.dir/127
/0.dir/128
/0.dir/129
/0.dir/13
/0.dir/130
/0.dir/131
/0.dir/132
/0.dir/133
/0.dir/134
/0.dir/135
/0.dir/136
/0.dir/137
/0.dir/138
/0.dir/139
/0.dir/14
/0.dir/140
/0.dir/141
/0.dir/142
/0.dir/143
/0.dir/144
/0.dir/145
/0.dir/146
/0.dir/147
/0.dir/148
/0.dir/149
/0.dir/15
/0.dir/150
/0.dir/151
/0.dir/152
/0.dir/153
/0.dir/154
/0.dir/155
/0.dir/156
/0.dir/157
/0.dir/158
/0.dir/159
/0.dir/16
/0.dir/160
/0.dir/161
/0.dir/162
/0.dir/163
/0.dir/164
/0.dir/165
/0.dir/166
/0.dir/167
/0.dir/168
/0.dir/169
/0.dir/17
/0.dir/170
/0.dir/171
/0.dir/172
/0.dir/173
/0.dir/174
/0.dir/175
/0.dir/176
/0.dir/177
/0.dir/178
/0.dir/179
/0.dir/18
/0.dir/180
/0.dir/181
/0.dir/182
/0.dir/183
/0.dir/184
/0.dir/185
/0.dir/186
/0.dir/187
/0.dir/188
/0.dir/189
/0.dir/19
/0.dir/190
/0.dir/191
/0.dir/192
/0.dir/193
/0.dir/194
/0.dir/195
/0.dir/196
/0.dir/197
/0.dir/198
/0.dir/199
/0.dir/2
/0.dir/20
/0.dir/200
/0.dir/201
/0.dir/202
/0.dir/203
/0.dir/204
/0.dir/205
/0.dir/206
/0.dir/207
/0.dir/208
/0.dir/209
/0.dir/21
/0.dir/210
/0.dir/211
/0.dir/212
/0.dir/213
/0.dir/214
/0.dir/215
/0.dir/216
/0.dir/217
/0.dir/218
/0.dir/219
/0.dir/22
/0.dir/220
/0.dir/221
/0.dir/222
/0.dir/223
/0.dir/224
/0.dir/225
/0.dir/226
/0.dir/227
/0.dir/228
/0.dir/229
/0.dir/23
/0.dir/230
/0.dir/231
/0.dir/232
/0.dir/233
/0.dir/234
/0.dir/235
/0.dir/236
/0.dir/237
/0.dir/238
/0.dir/239
/0.dir/24
/0.dir/240
/0.dir/241
/0.dir/242
/0.dir/243
/0.dir/244
/0.dir/245
/0.dir/246
/0.dir/247
/0.dir/25
/0.dir/26
/0.dir/27
/0.dir/28
/0.dir/29
/0.dir/3
/0.dir/30
/0.dir/31
/0.dir/32
/0.dir/33
/0.dir/34
/0.dir/35
/0.dir/36
/0.dir/37
/0.dir/38
/0.dir/39
/0.dir/4
/0.dir/40
/0.dir/41
/0.dir/42
/0.dir/43
/0.dir/44
/0.dir/45
/0.dir/46
/0.dir/47
/0.dir/48
/0.dir/49
/0.dir/5
/0.dir/50
/0.dir/51
/0.dir/52
/0.dir/53
/0.dir/54
/0.dir/55
/0.dir/56
/0.dir/57
/0.dir/58
/0.dir/59
/0.dir/6
/0.dir/60
/0.dir/61
/0.dir/62
/0.dir/63
/0.dir/64
/0.dir/65
/0.dir/66
/0.dir/67
/0.dir/68
/0.dir/69
/0.dir/7
/0.dir/70
/0.dir/71
/0.dir/72
/0.dir/73
/0.dir/74
/0.dir/75
/0.dir/76
/0.dir/77
/0.dir/78
/0.dir/79
/0.dir/8
/0.dir/80
/0.dir/81
/0.dir/82
/0.dir/83
/0.dir/84
/0.dir/85
/0.dir/86
/0.dir/87
/0.dir/88
/0.dir/89
/0.dir/9
/0.dir/90
/0.dir/91
/0.dir/92
/0.dir/93
/0.dir/94
/0.dir/95
/0.dir/96
/0.dir/97
/0.dir/98
/0.dir/99
/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/1.dir
/0.dir/0.dir/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/1.dir/0.dir
/0.dir/0.dir/0.dir/1.dir/1.dir

0xa677606fd73aa5a0
