tests/snapshots/generator__duplicate_create_files@_1_0_100.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 0 where each directory contains approximately 0 other directories.
Created 1 file across 0 directories.

/0

0x49bc192c478bfc2e
