tests/snapshots/generator__duplicate_create_files@_1_1_1000.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 1 where each directory contains approximately 1 other directory.
Created 1 file across 2 directories.

/0
/0.dir
/1.dir

0x2f7e0c4de4c5c440
